Restore fixed header/navbar and body padding-top for always-visible header

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6, .logo {
     top: 0 !important;
     left: 0 !important;
     right: 0 !important;
-    width: 100% !important;
+    width: 100vw !important;
     z-index: 10000 !important;
     margin: 0 !important;
     border-radius: 0 !important;
